--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Scaffolding for projects at Fullstack Academy",
   "main": "server/start.js",
   "scripts": {
-    "start": "node server/start.js",
+    "start": "nodemon server/start.js",
     "postinstall": "./node_modules/bower/bin/bower install && gulp build"
   },
   "dependencies": {
